--- a/src/RedFixGreen/redFixGreenApp/app.component.html
+++ b/src/RedFixGreen/redFixGreenApp/app.component.html
@@ -1,3 +1,7 @@
-﻿<div class="container">
+﻿<div class="navbar-header">
+    <button class="btn btn-primary btn-margin" (click)="auth.auth0LockInAppLogin()" *ngIf="!auth.isAuthenticated()">Log In</button>
+    <button class="btn btn-primary btn-margin" (click)="auth.auth0LockInAppLogout()" *ngIf="auth.isAuthenticated()">Log Out</button>
+</div>
+<div class="container">
     <router-outlet></router-outlet>
 </div>
